--- a/athom-smart-plug-v2.yaml
+++ b/athom-smart-plug-v2.yaml
@@ -88,12 +88,14 @@ sensor:
     update_interval: 10s
     current:
       name: "Current"
+      disabled_by_default: true
       filters:
           - lambda: if (x < 0.060) return 0.0; else return x;   #For the chip will report less than 3w power when no load is connected
 
 
     voltage:
       name: "Voltage"
+      disabled_by_default: true
     power:
       name: "Power"
       id: power_sensor
@@ -102,7 +104,6 @@ sensor:
 
 
     energy:
-      name: "Energy"
       id: energy
       unit_of_measurement: kWh
       filters:
@@ -128,7 +129,8 @@ sensor:
     update_interval: 10s
 
   - platform: total_daily_energy
-    name: "Total Daily Energy"
+    name: "Today's Consumption"
+    disabled_by_default: true
     restore: true
     power_id: power_sensor
     unit_of_measurement: kWh
