--- a/athom-smart-plug-v2.yaml
+++ b/athom-smart-plug-v2.yaml
@@ -152,7 +152,7 @@ button:
 
 switch:
   - platform: gpio
-    name: none
+    name: None
     pin: GPIO12
     id: relay
     restore_mode: ${relay_restore_mode}
